[gd_scene load_steps=13 format=3 uid="uid://8gww200imsw4"]

[ext_resource type="Script" path="res://Scripts/Centipede_Parent.gd" id="1_hxdub"]
[ext_resource type="Script" path="res://LEVEL_MANAGER.gd" id="1_rrlbx"]
[ext_resource type="Script" path="res://Scripts/SpawnStuff.gd" id="1_slty4"]
[ext_resource type="Texture2D" uid="uid://x34cgynde6m8" path="res://Sprite/WhiteSquare.png" id="3_ybqhk"]
[ext_resource type="Script" path="res://text_scroll.gd" id="4_1tpkm"]
[ext_resource type="Shader" path="res://EarthBound.gdshader" id="6_bcnsi"]
[ext_resource type="FontFile" uid="uid://br7gfki6pqkqu" path="res://Font/AtariClassicChunky.ttf" id="6_m1u4s"]
[ext_resource type="Texture2D" uid="uid://dt2yx1snpv2k0" path="res://icon.svg" id="6_ud3w4"]
[ext_resource type="Script" path="res://Scripts/CameraFollow.gd" id="6_x07qx"]
[ext_resource type="Script" path="res://score_check.gd" id="8_ftavh"]
[ext_resource type="PackedScene" uid="uid://b2ptabhsfdaap" path="res://scenes/Enemies/Enemy_Bus.tscn" id="12_c8yn6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e77nb"]
shader = ExtResource("6_bcnsi")
shader_parameter/screen_height = 640.0
shader_parameter/amplitude = 0.2
shader_parameter/frequency = 200.0
shader_parameter/speed = 6.0
shader_parameter/amplitude_vertical = 4.0
shader_parameter/frequency_vertical = 4.0
shader_parameter/speed_vertical = 4.0
shader_parameter/scroll_direction = Vector2(6, 6)
shader_parameter/scrolling_speed = 0.08
shader_parameter/enable_palette_cycling = true
shader_parameter/palette_speed = 0.456
shader_parameter/palette = ExtResource("6_ud3w4")

[node name="LEVEL_MANAGER" type="Node"]
script = ExtResource("1_rrlbx")

[node name="SCORE_CONTROLLER" type="CanvasLayer" parent="."]
script = ExtResource("8_ftavh")

[node name="score_meter" type="Label" parent="SCORE_CONTROLLER"]
offset_right = 288.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("6_m1u4s")
text = "CARNAGE: A BILLION"

[node name="angery_meter" type="Label" parent="SCORE_CONTROLLER"]
offset_top = 18.0
offset_right = 256.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("6_m1u4s")
text = "ANGERY: 14"

[node name="text_scroll" type="Label" parent="SCORE_CONTROLLER"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -23.0
offset_right = 687.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("6_m1u4s")
text = "CENTIPEDE CENTIPEDE CENTIPEDE CENTIPEDE CENTIPEDE CENTIPEDE CENTI

"
script = ExtResource("4_1tpkm")

[node name="Timer" type="Timer" parent="SCORE_CONTROLLER/text_scroll"]
wait_time = 0.2
autostart = true

[node name="combo_timer" type="Timer" parent="SCORE_CONTROLLER"]

[node name="Background_Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_e77nb")
scale = Vector2(350, 350)
texture = ExtResource("3_ybqhk")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(150, 150)
texture = ExtResource("3_ybqhk")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("1_slty4")

[node name="Centipede" type="Node2D" parent="."]
script = ExtResource("1_hxdub")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("6_x07qx")

[node name="SpawnEnemy" type="Timer" parent="."]
wait_time = 5.0

[node name="Bus" parent="." instance=ExtResource("12_c8yn6")]
position = Vector2(273, 55)

[connection signal="timeout" from="SCORE_CONTROLLER/text_scroll/Timer" to="SCORE_CONTROLLER/text_scroll" method="_on_timer_timeout"]
